Update ValidUserRoleValidator.java